# godot-uuid

./: .clang-format  .gitignore  CHANGE.md  CMakeLists.txt  README.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json
.obsidian/plugins/advanced-canvas/: data.json
.obsidian/plugins/obsidian-quiet-outline/: data.json  markdown-states.json
.obsidian/plugins/shiki-highlighter/: data.json
.obsidian/plugins/shiki-highlighter/custom-language/: flatbuffers.tsLanguage.json
.obsidian/plugins/shiki-highlighter/custom-theme/: fbs.theme.json
Diary/: 2024-04.md  2025-04.md  2025-06.md  2026-02.md  2026-04.md
Notes/: GrammarCanvas.canvas  GrammarGraph.canvas  Performance.md  QuestGraph.canvas  Research.md  TestingGraph.canvas  Tracker.md  cmd-line options.md
Notes/Features/: FeatureCanvas.canvas  FeatureTable.md  Verification.md
Notes/Research/: C++ Notes.md  DataFlow.canvas  cmd-line options.md  reflection.fbs.canvas
cmake/: findGodotExecutable.cmake  godot-docs.cmake
doc_classes/: FlatBuffer.xml  FlatBufferBuilder.xml  FlatBufferVerifier.xml  UUID.xml
src/: CMakeLists.txt  entry_point.cpp.in  flatbuffer.cpp  flatbuffer.hpp  flatbufferbuilder.cpp  flatbufferbuilder.hpp  flatbufferverifier.cpp  flatbufferverifier.hpp  gdextension.in  godot-cpp.build_profile.json  register_types.cpp  uuid.cpp  uuid.hpp
